# medici

./: CMakeLists.txt  IEndpointEventDispatch.hpp  README.md  time.hpp
application/: AppRunContextConfig.hpp  AppRunContextManager.hpp  ContextThreadConfig.hpp  IAppContext.hpp  IPAppRunContext.hpp  IPContextThreadConfig.hpp  concepts.hpp
cryptoUtils/: CMakeLists.txt  CryptoUtils.cpp  CryptoUtils.hpp  OpenSSLUtils.cpp  OpenSSLUtils.hpp
event_queue/: EventQueue.hpp  concepts.hpp
http/: CMakeLists.txt  CompressionUtils.cpp  CompressionUtils.hpp  ContentType.cpp  ContentType.hpp  FieldContentUtils.cpp  FieldContentUtils.hpp  HTTPAction.hpp  HttpFields.cpp  HttpFields.hpp  MultipartPayload.cpp  MultipartPayload.hpp  gzFileBuf.hpp  writeBufferToTempFile.hpp
shm_endpoints/: FullDuplexEndpointsImpl.hpp  SCMPEndpointsImpl.hpp  SPMCEndpointsImpl.hpp  SharedMemEndpointFactory.hpp  SharedMemPODQueueDefinition.hpp  SharedMemoryObjectManager.hpp  interfaces.hpp  shmUtils.hpp  testUtils.hpp
shm_endpoints/tests/: CMakeLists.txt  SharedMemEndpointTests.cpp  ShmEndpointOutProcTest.cpp  ShmMemClearTests.cpp  ShmUniqueNametest.cpp  consumerMain.cpp  duplexMain.cpp  producerMain.cpp
sockets/: CMakeLists.txt  EndpointCallbackContext.hpp  EndpointConfig.hpp  GroupEndpointCoordinator.hpp  IPEndpointHandlerCapture.hpp  RemoteEndpointListener.hpp  WSOpCode.hpp  concepts.hpp  interfaces.hpp
sockets/live/: CMakeLists.txt  EndpointBase.hpp  HTTPLiveClientEndpoint.hpp  HTTPLiveEndpoint.hpp  HTTPLiveServerEndpoint.hpp  HttpLiveListenEndpoints.hpp  HttpServerHandler.hpp  IPEndpointConnectionManager.cpp  IPEndpointConnectionManager.hpp  IPEndpointPollManager.cpp  IPEndpointPollManager.hpp  LiveListenerEndpointBaseImpl.hpp  LiveSocketFactory.hpp  SSLLiveEndpoint.hpp  TcpIpLiveEndpoint.hpp  TcpIpLiveListenEndpoints.hpp  WSServerHandler.hpp  WebSocketLiveEndpoint.hpp  WebSocketLiveListenEndpoints.hpp
sockets/live/exampleApps/: CMakeLists.txt
sockets/live/exampleApps/SimpleHttpApp/: CMakeLists.txt  main.cpp
sockets/live/testCredentials/: sslTestCerts.hpp
sockets/live/tests/: CMakeLists.txt  HttpServerClientTests.cpp  ServerClientTestHarness.cpp  ServerClientTestHarness.hpp  TCPClientServerTests.cpp  WSServerClientTests.cpp  clientServerTests.cpp  compileTests.cpp  largeContent.hpp  server.crt  server.key  sslTestCerts.hpp  writeStringToTempFile.cpp
tests/: CMakeLists.txt  EventQueueTests.cpp  main.cpp
timers/: EndpointTimer.hpp  ManualTimer.hpp  TimerFactory.hpp  concepts.hpp  interfaces.hpp
